my/target/test/cgdb-scan/2022-04-20-221623-54423-1/failures/clang_other_error_7OukHF.ii.stderr.txt
test/cc/glog2.cc:8:10: fatal error: 'glog/logging.h' file not found
#include <glog/logging.h>
         ^~~~~~~~~~~~~~~~
1 error generated.
